[gd_scene load_steps=8 format=3 uid="uid://k0qp65u3ikco"]

[ext_resource type="Script" path="res://src/ui/menus/main_menu.gd" id="1_4ng5m"]
[ext_resource type="Texture2D" uid="uid://clnvc6dbl5le8" path="res://assets/background.png" id="1_6cj6r"]
[ext_resource type="Texture2D" uid="uid://dmn0jb6emjl44" path="res://assets/player.png" id="2_u8uqp"]

[sub_resource type="Theme" id="Theme_amwds"]
default_font_size = 102

[sub_resource type="Animation" id="Animation_idle"]
resource_name = "RESET"
length = 0.001

[sub_resource type="Animation" id="Animation_jump_spin"]
resource_name = "jump_spin"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(200, 280), Vector2(200, 180), Vector2(200, 180), Vector2(200, 280)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 6.28319, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jump"]
_data = {
"RESET": SubResource("Animation_idle"),
"jump_spin": SubResource("Animation_jump_spin")
}

[node name="MainMenuAlt" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_4ng5m")
metadata/_edit_horizontal_guides_ = [521.0]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -72.0
offset_top = -12.0
offset_right = 1238.0
offset_bottom = 855.0
texture = ExtResource("1_6cj6r")

[node name="TitleControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="Label" type="Label" parent="TitleControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -70.0
offset_right = 239.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_amwds")
text = "GeoJump!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContentContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="ButtonsContainer" type="VBoxContainer" parent="ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="ContinueButton" type="Button" parent="ContentContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="SelectLevelButton" type="Button" parent="ContentContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = " Select Level "

[node name="ShopButton" type="Button" parent="ContentContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "Shop"

[node name="AnimationSpace" type="Control" parent="ContentContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerSprite" type="Sprite2D" parent="ContentContainer/AnimationSpace"]
position = Vector2(200, 253)
texture = ExtResource("2_u8uqp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ContentContainer/AnimationSpace/PlayerSprite"]
libraries = {
"": SubResource("AnimationLibrary_jump")
}
autoplay = "jump_spin"

[node name="ResetButtonControl" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Button" type="Button" parent="ResetButtonControl"]
layout_direction = 3
layout_mode = 0
offset_left = 16.0
offset_top = 17.0
offset_right = 136.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 20
text = "Reset"

[connection signal="mouse_entered" from="ContentContainer/ButtonsContainer/ContinueButton" to="." method="_on_continue_button_mouse_entered"]
[connection signal="mouse_exited" from="ContentContainer/ButtonsContainer/ContinueButton" to="." method="_on_continue_button_mouse_exited"]
[connection signal="pressed" from="ContentContainer/ButtonsContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ContentContainer/ButtonsContainer/SelectLevelButton" to="." method="_on_select_level_button_pressed"]
[connection signal="pressed" from="ContentContainer/ButtonsContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="ResetButtonControl/Button" to="." method="_on_button_pressed"]
